--- a/conf/poker.server.xml.in
+++ b/conf/poker.server.xml.in
@@ -151,7 +151,7 @@
   <!-- <listen ... manhole="%(manhole_port)i" />  -->
   <!-- manhole is useful for debugging, use with telnet admin/admin, 
        however, it can be a security risk and should be used only during debugging -->
-  <resthost host="localhost" port="19384" path="/POKER_REST"/>
+  <resthost host="@config.resthost.host@" port="@config.resthost.port@" path="/POKER_REST"/>
 
   <!-- <auth script="pokernetwork.pokerauth"/> -->
 
