--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 command-packages=pokerdistutils
 
 [configure]
-files=database/*.in conf/*.in pokernetwork/*.in tests/*.in pokerstats/*.in pokerprizes/*.in
+files=database/*.in conf/*.in tests/conf/*.in pokernetwork/*.in tests/*.in pokerstats/*.in pokerprizes/*.in
 
 [test]
 files=tests/test_*.py
