--- a/conf/poker.bot.xml.in
+++ b/conf/poker.bot.xml.in
@@ -30,7 +30,7 @@
 
   <name>test</name>
   <passwd>test</passwd>
-  <servers>@config.pokernetwork.host@:@config.pokernetwork.port@</servers>
+  <servers>@config.pokernetwork.rest.host@:@config.pokernetwork.listen.tcp@</servers>
   <muck>yes</muck>
   <auto_post>yes</auto_post>
 
