--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,19 @@ install:
  - sudo apt-get install -qq apg
  - sudo apt-get install -qq libmcrypt-dev
  - sudo apt-get install -qq bc
+ - pip install http://pypi.python.org/packages/source/w/wstools/wstools-0.4.tar.gz
+ - pip install http://pypi.python.org/packages/source/f/fpconst/fpconst-0.7.2.tar.gz
+ - pip install http://pypi.python.org/packages/source/z/zope.interface/zope.interface-4.0.1.tar.gz
+ - pip install http://pypi.python.org/packages/source/T/Twisted/Twisted-11.1.0.tar.bz2
+ - pip install http://pypi.python.org/packages/source/M/MySQL-python/MySQL-python-1.2.3.tar.gz
+ - pip install http://ftp.tummy.com/pub/python-memcached/python-memcached-1.48.tar.gz
+ - pip install http://pypi.python.org/packages/source/s/simplejson/simplejson-2.6.1.tar.gz
+ - pip install http://pypi.python.org/packages/source/c/coverage/coverage-3.5.2.tar.gz
+ - pip install http://pypi.python.org/packages/source/p/pycrypto/pycrypto-2.6.tar.gz
+ - pip install http://pypi.python.org/packages/source/p/pyasn1/pyasn1-0.1.4.tar.gz
+ - pip install http://pypi.python.org/packages/source/S/SOAPpy/SOAPpy-0.12.5.tar.gz
+ - pip install http://pypi.python.org/packages/source/p/python-cjson/python-cjson-1.0.5.tar.gz
+ - pip install http://pypi.python.org/packages/source/p/pyOpenSSL/pyOpenSSL-0.13.tar.
  - pip install http://github.com/pokermania/pokerdistutils/archive/master.zip
  - pip install http://github.com/pokermania/reflogging/archive/master.zip
  - pip install http://github.com/pokermania/pokerengine/archive/master.zip
