--- a/pokernetwork/pokerserver.in
+++ b/pokernetwork/pokerserver.in
@@ -1,4 +1,4 @@
-#/usr/bin/env python
+#!/usr/bin/env python
 # -*- coding: utf-8 -*-
 #
 # Copyright (C) 2005, 2006 Mekensleep <licensing@mekensleep.com>
