--- a/debian/control
+++ b/debian/control
@@ -21,8 +21,8 @@ Depends:
     ucf,
     adduser,
     python-twisted (>= 10.1),
-    python-poker-engine (>= 1.5.4-12),
-    python-poker-packets (>= 2.3.0),
+    python-poker-engine (>= 1.7.2),
+    python-poker-packets (>= 2.4.1),
     python-mysqldb,
     python-soappy,
     python-openssl,
