added bg and bg_BG to languages

--- a/conf/poker.server.xml.in
+++ b/conf/poker.server.xml.in
@@ -47,6 +47,8 @@
   <language value="fr_CA.UTF-8"/>
   <language value="de.UTF-8"/>
   <language value="de_DE.UTF-8"/>
+  <language value="bg.UTF-8"/>
+  <language value="bg_BG.UTF-8"/>
   <language value="es.UTF-8"/>
   <language value="es_ES.UTF-8"/>
   <language value="nl.UTF-8"/>
