--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install:
     bc
     apg
     php5-cli
+ - pip install -U pip
  - pip install
     http://pypi.python.org/packages/source/w/wstools/wstools-0.4.tar.gz
     http://pypi.python.org/packages/source/f/fpconst/fpconst-0.7.2.tar.gz
@@ -37,10 +38,10 @@ install:
     http://pypi.python.org/packages/source/S/SOAPpy/SOAPpy-0.12.5.tar.gz
     http://pypi.python.org/packages/source/p/python-cjson/python-cjson-1.0.5.tar.gz
     http://pypi.python.org/packages/source/p/pyOpenSSL/pyOpenSSL-0.13.tar.gz
-    http://github.com/pokermania/pokerdistutils/tarball/master
-    http://github.com/pokermania/reflogging/tarball/master
-    http://github.com/pokermania/pokerengine/tarball/master
-    http://github.com/pokermania/pokerpackets/tarball/master
+    git://github.com/pokermania/pokerdistutils.git
+    git://github.com/pokermania/reflogging.git
+    git://github.com/pokermania/pokerengine.git
+    git://github.com/pokermania/pokerpackets.git
 
 # command to run tests, e.g. python setup.py test
 before_script:
