--- a/database/schema.sql.in
+++ b/database/schema.sql.in
@@ -268,6 +268,8 @@ CREATE TABLE user2tourney (
   tourney_serial int(11) NOT NULL,
   table_serial int(11) DEFAULT NULL,
   rank int(11) NOT NULL DEFAULT '-1',
+  rebuy_count int(11) NOT NULL DEFAULT '0',
+  add_on_count int(11) NOT NULL DEFAULT '0',
   PRIMARY KEY (user_serial,tourney_serial),
   KEY user_serial (user_serial,currency_serial,tourney_serial),
   KEY rank (rank),
