pokertournament: support for tourney player removal after delay, refs #9362

--- a/database/schema.sql.in
+++ b/database/schema.sql.in
@@ -180,6 +180,7 @@ CREATE TABLE tourneys (
   rebuy_delay int(11) NOT NULL DEFAULT '0',
   add_on int(11) NOT NULL DEFAULT '0',
   add_on_delay int(11) NOT NULL DEFAULT '60',
+  inactive_delay int(11) NOT NULL DEFAULT '0',
   start_time int(11) NOT NULL DEFAULT '0',
   satellite_of int(10) unsigned NOT NULL DEFAULT '0',
   via_satellite tinyint(4) NOT NULL DEFAULT '0',
@@ -221,6 +222,7 @@ CREATE TABLE tourneys_schedule (
   rebuy_delay int(11) NOT NULL DEFAULT '0',
   add_on int(11) NOT NULL DEFAULT '0',
   add_on_delay int(11) NOT NULL DEFAULT '60',
+  inactive_delay int(11) NOT NULL DEFAULT '0',
   start_time int(11) NOT NULL DEFAULT '0' COMMENT 'Unix timestamp of the tournament start.',
   register_time int(11) NOT NULL DEFAULT '0' COMMENT 'Unix timestamp of the registration start.',
   active char(1) NOT NULL DEFAULT 'y' COMMENT 'n : the tournament is ignored by the server, y : the tournament is considered by the server.',
