add msgpack-python to debian deps

--- a/debian/control
+++ b/debian/control
@@ -29,6 +29,7 @@ Depends:
     python-simplejson,
     python-memcache,
     libjson-perl,
+    msgpack-python,
     dbconfig-common,
     mysql-client,
     apg,
